# QT

./: README.md
DBTest01/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  mariadb.cpp  mariadb.h  printhelloworld.cpp  printhelloworld.h  sqlite.cpp  sqlite.h
Designer/SampleDesign01/: CMakeLists.txt  SampleDesign01.qmlproject  SampleDesign01.qmlproject.qtds  Screen01.ui.qml
Designer/SampleDesign01/imports/MCUDefaultStyle/: Button.qml  CheckBox.qml  RadioButton.qml  Slider.qml  Switch.qml
DesktopTest01/: CMakeLists.txt  ConnectDB.cpp  ConnectDB.h  PrintHelloWorld.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  println.h
DesktopTest01/images/: intellivix.qrc
MultiWidgetTest01/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  secondwindow.cpp  secondwindow.h  secondwindow.ui
MultiscreenTest01/: CMakeLists.txt  Popup.cpp  Popup.h  main.cpp  mainwindow.cpp  mainwindow.ui
MutlWindows01/: CMakeLists.txt  dialog01.cpp  dialog01.h  dialog01.ui  mainwindow.cpp  mainwindow.ui
QuickAppTest01/: CMakeLists.txt  Main.qml  main.cpp
VideoPlayer/: .gitignore  Makefile  VideoPlayer.pro  main.cpp  run.sh  videoplayer.cpp  videoplayer.h
